# case-transformer-rs

./: Cargo.toml  README.md  index.html
frontend/: index.html
src/: endpoints.rs  lib.rs  main.rs  transform.rs
src/transform/: transform_method.rs
tests/: general.rs  transform.rs
