[package]
name = "case-transformer-rs"
version = "0.1.0"
edition = "2021"
authors = ["Devon Bloch - Software Engineer"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
env_logger = "0.11"
eyre = "0.6"
log = "0.4"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }  # Core serde with derive feature
serde_json = "1.0"
kuchikiki = "0.8.2"

[dev-dependencies]
actix-rt = "2.10"
